[gd_scene load_steps=2 format=3 uid="uid://cxn3j8p2vhx8p"]

[ext_resource type="Script" path="res://scripts/ui/GlossaryTermEntry.gd" id="1_term_entry"]

[node name="GlossaryTermEntry" type="Button"]
custom_minimum_size = Vector2(0, 60)
script = ExtResource("1_term_entry")
flat = true
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
mouse_filter = 2

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Term Name"
vertical_alignment = 1
clip_text = true

[node name="CategoryLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Category"
vertical_alignment = 1
clip_text = true

[node name="ComplexityBadge" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "BÃ¡sico"
horizontal_alignment = 1
vertical_alignment = 1
